fixed after code review: 1. add .gitignore 2. add hidden h1 3. change buttons to divs in learnmore section 4. wrapped phones/email in <a> 5. change input to submit button in form 6. add correct input type 7. separated the @font-faces into fonts.css

--- a/css/feedback.css
+++ b/css/feedback.css
@@ -67,6 +67,11 @@
     text-decoration: underline;
 }
 
+.feedback__phonemail {
+    text-decoration: none;
+    color: #000000;
+}
+
 .feedback__right {
     display: flex;
     flex-direction: column;
