--- a/css/instagram.css
+++ b/css/instagram.css
@@ -42,4 +42,5 @@
 
 .instagram__feed {
     display: flex;
+    overflow-x: hidden
 }
