--- a/css/style.css
+++ b/css/style.css
@@ -17,36 +17,17 @@ body {
     justify-content: center;
 }
 
-
-/* montserrat-300 - latin_cyrillic */
-
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 300;
-    src: url('../fonts/montserrat-v15-latin_cyrillic-300.eot');
-    /* IE9 Compat Modes */
-    src: local(''), url('../fonts/montserrat-v15-latin_cyrillic-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/montserrat-v15-latin_cyrillic-300.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/montserrat-v15-latin_cyrillic-300.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/montserrat-v15-latin_cyrillic-300.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/montserrat-v15-latin_cyrillic-300.svg#Montserrat') format('svg');
-    /* Legacy iOS */
-}
-
-
-/* montserrat-700 - latin_cyrillic */
-
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/montserrat-v15-latin_cyrillic-700.eot');
-    /* IE9 Compat Modes */
-    src: local(''), url('../fonts/montserrat-v15-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/montserrat-v15-latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/montserrat-v15-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/montserrat-v15-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/montserrat-v15-latin_cyrillic-700.svg#Montserrat') format('svg');
-    /* Legacy iOS */
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
 }
